# agentic-reliability-framework

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  FIX_VERIFICATION_CHECKLIST.md  LICENSE.txt  MANIFEST.in  README (1).md  README.md  RELEASE_COMPLETION_v3.3.6.md  RELEASE_NOTES.md  app.py  app.py.backup  check_context.py  clean_faiss_section.py  currently_installed.txt  final_verification.py  fix_business_metrics_call.py  fix_config_dataclass.py  fix_thread_safe_issue.py  incident_texts.json  incident_vectors.index  manual_fix.py  manual_fix_business.py  migration.py  pyproject.toml  pytest.ini  quick_test.py  rebuild_business_section.py  requirements.txt  requirements.txt.backup  ruff.toml  setup.cfg  setup.py  simple_business_test.py  test_business_metrics.py  test_definitive.py  test_integration.py  test_simple.py  verify_final.py
.github/: dependabot.yml
.github/workflows/: accurate_v3_validation.yml  ci.yml  codeql.yml  fix_and_validate_v3.yml  identify_v3_violations_only.yml  maintenance.yml  oss_comprehensive.yml  oss_tests.yml  publish.yml  pypi-publish.yml  release_v3.3.9.yml  test_healing_intent.yml  test_oss_integration.yml  tests.yml  tests_workflow.yml  v3_comprehensive.yml  v3_milestone_sequence.yml  v3_release_automation.yml
Test/: conftest.py  final_oss_verification.py  final_verification.py  test_agents.txt  test_basic.py  test_business_metrics.py  test_end_to_end.py  test_faiss_memory.txt  test_input_validation.py  test_mcp_server_oss.py  test_models.py  test_oss_mcp_client.py  test_oss_purity.py  test_policy_engine.py  test_timeline_calculator.py  test_timeline_formatter.py  test_timeline_integration.py  verify_both_packages.py
agentic_reliability_framework/: __init__.py  __init__.py.backup_with_app_import  app.py  app.py.backup_before_lazy_fix  app.py.backup_before_replacements  app.py.backup_fix  app.py.bak  cli.py  config.py  engine.py  engine_proxy.py  healing_policies.py.backup  lazy.py  lazy_init.py  models.py
agentic_reliability_framework.egg-info/: PKG-INFO  SOURCES.txt
agentic_reliability_framework/arf_core/: __init__.py  constants.py
agentic_reliability_framework/arf_core/config/: oss_config.py
agentic_reliability_framework/arf_core/engine/: oss_mcp_client.py  simple_mcp_client.py
agentic_reliability_framework/arf_core/models/: __init__.py  healing_intent.py
agentic_reliability_framework/engine/: __init__.py  engine_factory.py  interfaces.py  mcp_client.py  mcp_factory.py  mcp_server.py  predictive.py  reliability.py  v3_reliability.py
agentic_reliability_framework/memory/: __init__.py  constants.py  enhanced_faiss.py  faiss_index.py  rag_graph.py
archive/: debug_table_data.py  patch_app.py  replace_references.py
archive/test_files/: test_import.py  test_patch.py
arf/: app.py.backup2
backup_builds/: agentic_reliability_framework-2.0.0-py3-none-any.whl
docs/: ARF_Implementation_Plan_v2.0.md  ARF_Tier1-2_Implementation_Plan.md  ARF_v3_OSS_vs_Enterprise_Plan.md  FIXES_SUMMARY.md  MAINTENANCE.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  VERSION_UPGRADE_v3.3.7.md  api.md  architecture.md  architecture_v_3_rag_schema.md  enterprise_readme.md  multi-agent.md
docs/brand/: README.md
docs/technical/: V3_PROVEN_SPLIT.md  faiss-memory.md  self-healing.md
enterprise/: mcp_server.py
enterprise/license/: __init__.py  manager.py
examples/: custom_policies.py  quickstart.py
oss/: __init__.py  healing_intent.py
scripts/: diagnose_ci_issues.py  direct_violation_check.py  emergency_cleanse_enterprise.py  enforce_oss_purity.py  enhanced_v3_boundary_check.py  find_exact_v3_violations.py  fix_mypy_errors.py  fix_type_errors.py  oss_boundary_check.py  review_v3_artifacts.py  run_v3_validation.py  seed_demo_data.py  show_violations_only.py  smart_v3_validator.py  test_v3.3.8_readiness.py  test_v3_quick.py  verify_circular_fix.py
tests/: test_basic.py
